updated basic user name and password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8090
 
 ZipWhipBaseUrl=https://api.zipwhip.com
 
-spring.security.user.name=7G*TyP+U-JhbfTtQ
-spring.security.user.password=@7*-TZZYZ!Ez4C6e
+spring.security.user.name=<<USER NAME>>
+spring.security.user.password=<<USER PASSWORD>>
